--- a/src/sidebar/css/tab-content-shared.css
+++ b/src/sidebar/css/tab-content-shared.css
@@ -5,7 +5,6 @@
   right: 0;
   bottom: 0;
   background-color: var(--background-primary-alt);
-  border: 2px solid var(--background-modifier-border);
   & ul,
   ol {
     margin: 0;
